<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.Preference
        android:key="pref_quit_mode"
        android:title="@string/settings_quit_mode_title"
        android:summary="" />

    <PreferenceCategory
        android:title="@string/settings_section_appearance">

        <androidx.preference.ListPreference
            android:key="pref_theme"
            android:title="@string/settings_theme_title"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system" />

        <androidx.preference.ListPreference
            android:key="pref_accent"
            android:title="@string/settings_accent_title"
            android:summary="@string/settings_accent_summary"
            android:entries="@array/accent_entries"
            android:entryValues="@array/accent_values"
            android:defaultValue="teal" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_section_notifications">

        <androidx.preference.SwitchPreferenceCompat
            android:key="pref_notifications_enabled"
            android:title="@string/settings_notifications_enable"
            android:summaryOn="@string/settings_notifications_summary_on"
            android:summaryOff="@string/settings_notifications_summary_off" />

        <androidx.preference.Preference
            android:key="pref_notification_time"
            android:title="@string/settings_notifications_time"
            android:summary="@string/settings_notifications_time_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_section_data">

        <androidx.preference.Preference
            android:key="pref_export"
            android:title="@string/settings_data_export_title"
            android:summary="@string/settings_data_export_summary" />

        <androidx.preference.Preference
            android:key="pref_clear"
            android:title="@string/settings_data_clear_title"
            android:summary="@string/settings_data_clear_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_section_about">

        <androidx.preference.Preference
            android:key="pref_privacy"
            android:title="@string/settings_privacy_title" />

        <androidx.preference.Preference
            android:key="pref_support"
            android:title="@string/settings_support_title"
            android:summary="@string/settings_support_summary" />
    </PreferenceCategory>

</PreferenceScreen>
